修改个人关于页面

--- a/themes/zozo/layouts/_default/about.html
+++ b/themes/zozo/layouts/_default/about.html
@@ -36,12 +36,13 @@
           简单普通/1/性格
           爱自由/1/性格
           神经质/1/性格
+          不喜欢微信/1/性格
           没有音乐活不了/1/性格/https://open.spotify.com/playlist/66RQ2F6iCvQbOGW66VaEYk?si=dcb7d51b17d04cc1
           听歌/1/爱好
           发呆/1/爱好/
           记录各类博客主题/1/爱好
           骑车兜风/1/爱好
-          为我的博客安一个家/1/爱好/https://index.wangyunzi.com
+          为我的博客安一个家/1/爱好/
           没事瞎折腾/1/生活/
           无辣不欢/1/美食
           辣椒才是灵魂/1/美食
@@ -58,6 +59,7 @@
 
 <h3>🌞建站日记 </h3>
     <ul>
+        <li>2024年05月01日 - 转回静态博客</li>
         <li>2024年01月22日 - 尝试主题 <a href="https://www.bawge.com/archives/63.html">MeaWord</a></li>
         <li>2024年01月19日 - 尝试博客主题 <a href="https://github.com/txperl/Story-for-Typecho">Story</a></li>
         <li>2023年09月08日 - 变迁博客至 Typecho，主题是 <a href="https://muxer.cn/theme/typecho-theme-gplus.html">Gplus</a></li>
@@ -70,14 +72,13 @@
 
     <h3>🐱其他 </h3>
     <ul>
+        <li>本人不接受除Telegram和email之外的联络</li>
         <li>一个wp主题的朋友圈：<a href="https://wangyunzi.staticfile.run/">王云子的朋友圈</a>；感谢<a href="https://kam.space/">锦</a></li>
         <li>本页面的标签代码是使用的这个小姐姐的项目 <a href="https://mengru.space/?weeks/2022/24">https://mengru.space/?weeks/2022/24</a></li>
         <li>博客部分网络图片来自 <a href="https://pixabay.com/zh/">Pixabay</a>、<a href="https://www.pinterest.com/">Pinterest</a>，若侵权请告知博主，博主将会第一时间删除</li>
     </ul>
 
-    <a href="https://www.travellings.cn/go.html" target="_blank" rel="noopener" title="开往-友链接力"><img src="https://www.travellings.cn/assets/logo.gif" style="width:100px;height:40px;"></a>
-    <a href="https://www.foreverblog.cn/go.html" target="_blank"> <img src="https://img.foreverblog.cn/wormhole_4_tp.gif" alt="" style="width:200px;height:40px;" title="穿梭虫洞-随机访问十年之约友链博客"></a>
-</br>
+
 </br>
     <img src="https://count.getloli.com/get/@wangyunzi?theme=asoul" alt=":wangyunzi">
 
