修改个人关于页面

--- a/themes/zozo/layouts/_default/about.html
+++ b/themes/zozo/layouts/_default/about.html
@@ -73,7 +73,7 @@
     <h3>🐱其他 </h3>
     <ul>
         <li>本人不接受除Telegram和email之外的联络</li>
-        <li>一个wp主题的朋友圈：<a href="https://wangyunzi.staticfile.run/">王云子的朋友圈</a>；感谢<a href="https://kam.space/">锦</a></li>
+        <li>一个wp主题的朋友圈；感谢<a href="https://kam.space/">锦</a></li>
         <li>本页面的标签代码是使用的这个小姐姐的项目 <a href="https://mengru.space/?weeks/2022/24">https://mengru.space/?weeks/2022/24</a></li>
         <li>博客部分网络图片来自 <a href="https://pixabay.com/zh/">Pixabay</a>、<a href="https://www.pinterest.com/">Pinterest</a>，若侵权请告知博主，博主将会第一时间删除</li>
     </ul>
