--- a/themes/zozo/layouts/_default/album.html
+++ b/themes/zozo/layouts/_default/album.html
@@ -10,8 +10,8 @@
                 <div class="gallery-photos page">
                     <img src="https://eeeeeeeeeeeeee.ee/img/loading.svg" style="margin:auto">
                     </div>
-                    <link rel="stylesheet" href="https://cdn.staticfile.org/fancyapps-ui/4.0.27/fancybox.min.css" media="print" onload="this.media='all'">
-                    <script src="https://cdn.staticfile.org/fancyapps-ui/4.0.27/fancybox.umd.min.js"></script>
+                    <!-- <link rel="stylesheet" href="https://cdn.staticfile.org/fancyapps-ui/4.0.27/fancybox.min.css" media="print" onload="this.media='all'">
+                    <script src="https://cdn.staticfile.org/fancyapps-ui/4.0.27/fancybox.umd.min.js"></script> -->
                     
                     <style>
                     /* 页面初始化 */
