修改全局图片放大和相册页面放大冲突问题

--- a/themes/zozo/layouts/_default/album.html
+++ b/themes/zozo/layouts/_default/album.html
@@ -10,8 +10,8 @@
                 <div class="gallery-photos page">
                     <img src="https://eeeeeeeeeeeeee.ee/img/loading.svg" style="margin:auto">
                     </div>
-                    <link rel="stylesheet" href="https://cdn.staticfile.org/fancyapps-ui/4.0.27/fancybox.min.css" media="print" onload="this.media='all'">
-                    <script src="https://cdn.staticfile.org/fancyapps-ui/4.0.27/fancybox.umd.min.js"></script>
+                    <!-- <link rel="stylesheet" href="https://cdn.staticfile.org/fancyapps-ui/4.0.27/fancybox.min.css" media="print" onload="this.media='all'">
+                    <script src="https://cdn.staticfile.org/fancyapps-ui/4.0.27/fancybox.umd.min.js"></script> -->
                     
                     <style>
                     /* 页面初始化 */
@@ -70,11 +70,11 @@
                                 time ? html += `<span class="photo-time">${time}</span>` : ''
                                 html += `</div>`
                             })
-                    console.log(Fancybox);
-                            document.querySelector('.gallery-photos.page').innerHTML = html
-                            imgStatus.watch('.photo-img', () => { waterfall('.gallery-photos') })
-                            window.Lately && Lately.init({ target: '.photo-time' })
-                        }).catch()
+                    // console.log(Fancybox);
+                            // document.querySelector('.gallery-photos.page').innerHTML = html
+                            // imgStatus.watch('.photo-img', () => { waterfall('.gallery-photos') })
+                            // window.Lately && Lately.init({ target: '.photo-time' })
+                        // }).catch()
                     }
                     
                     </script>
