--- a/themes/zozo/layouts/_default/friend.html
+++ b/themes/zozo/layouts/_default/friend.html
@@ -42,7 +42,7 @@
     <li><a href="https://jingxin18.cn" style="color: red;">二猫 blog</a> - 一个简单的 Blog 站点</li>
     <li><a href="https://blog.cuger.cn" style="color: red;">Dorad</a> - 地质、炼丹、编程、GIS、摄影</li>
     <li><a href="https://wenderfeng.top/" style="color: red;">wenderfeng</a> - Step by step</li>
-    <li><a href="https://blog.catchyun.com/" style="color: red;">云晓晨CatchYun</a> - 未来路远 • 勿忘初心</li>
+    <li><a href="https://www.catchyxc.com/" style="color: red;">云晓晨CatchYXC</a> - 未来路远 • 勿忘初心</li>
 </ul>
 
 <h3>友链要求</h3>
