--- a/themes/zozo/layouts/partials/head.html
+++ b/themes/zozo/layouts/partials/head.html
@@ -47,6 +47,16 @@
     <script src="{{ "js/zozo.js" | absURL }}"></script>
     <script src="{{ "js/view-image.js" | absURL }}"></script>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RG3B8PERQE"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RG3B8PERQE');
+</script>
+
 
     {{ if .Site.Params.enableMathJax }}
     {{ partial "mathjax.html" . }}
