--- a/themes/zozo/layouts/partials/head.html
+++ b/themes/zozo/layouts/partials/head.html
@@ -57,6 +57,9 @@
   gtag('config', 'G-RG3B8PERQE');
 </script>
 
+<script type="text/javascript" src="//js.users.51.la/21897449.js"></script>
+
+
 
     {{ if .Site.Params.enableMathJax }}
     {{ partial "mathjax.html" . }}
