添加百度统计

--- a/themes/zozo/layouts/partials/head.html
+++ b/themes/zozo/layouts/partials/head.html
@@ -59,6 +59,17 @@
 
 <script type="text/javascript" src="//js.users.51.la/21897449.js"></script>
 
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?78820c974c73efd2bb12a472c22119d7";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
+
 
 
     {{ if .Site.Params.enableMathJax }}
