--- a/themes/zozo/layouts/_default/single.html
+++ b/themes/zozo/layouts/_default/single.html
@@ -47,6 +47,26 @@
                     })();
                 </script>
                 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                <div>
+                        <script data-isso="https://wangyunzi.com/"
+                                data-isso-id="thread-id"
+                                data-isso-css="true"
+                                data-isso-lang="zh"
+                                data-isso-reply-to-self="false"
+                                data-isso-require-author="true"
+                                data-isso-require-email="true"
+                                data-isso-max-comments-top="10"
+                                data-isso-max-comments-nested="5"
+                                data-isso-reveal-on-click="5"
+                                data-isso-avatar="true"
+                                data-isso-avatar-bg="#f0f0f0"
+                                data-isso-avatar-fg="#9abf88 #5698c4 #e279a3 #9163b6 ..."
+                                data-isso-vote="true"
+                                data-isso-vote-levels=""
+                                src="https://wangyunzi.com/js/embed.min.js"></script>
+                            <section id="isso-thread"></section>
+                 </div>
+
             </div>
         </div>
     </div>
