--- a/themes/zozo/layouts/_default/single.html
+++ b/themes/zozo/layouts/_default/single.html
@@ -48,7 +48,7 @@
                 </script>
                 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
                 <div>
-                        <script data-isso="https://wangyunzi.com/"
+                        <script data-isso="http://wangyunzi.com"
                                 data-isso-id="thread-id"
                                 data-isso-css="true"
                                 data-isso-lang="zh"
@@ -63,7 +63,7 @@
                                 data-isso-avatar-fg="#9abf88 #5698c4 #e279a3 #9163b6 ..."
                                 data-isso-vote="true"
                                 data-isso-vote-levels=""
-                                src="https://wangyunzi.com/js/embed.min.js"></script>
+                                src="http://wangyunzi.com/js/embed.min.js"></script>
                             <section id="isso-thread"></section>
                  </div>
 
