--- a/themes/zozo/layouts/_default/single.html
+++ b/themes/zozo/layouts/_default/single.html
@@ -47,6 +47,12 @@
                     })();
                 </script>
                 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                
+                <!--  pocketbase储存评论 -->
+                <div id="comments" data-url="https://pocketbase.wangyunzi.com/api/comment"></div>
+                <script type="module" crossorigin src="https://pocketbase.wangyunzi.com/comment.js"></script>
+                
+                <!--  isso评论 -->
                 <div>
                         <script data-isso="http://wangyunzi.com"
                                 data-isso-id="thread-id"
