删除isso评论设置

--- a/themes/zozo/layouts/_default/single.html
+++ b/themes/zozo/layouts/_default/single.html
@@ -28,7 +28,7 @@
                         {{ end }}
                     </div>
                 </div>
-                <div id="disqus_thread"></div>
+<!--                 <div id="disqus_thread"></div>
                 <script>
                     /**
                     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
@@ -46,32 +46,12 @@
                     (d.head || d.body).appendChild(s);
                     })();
                 </script>
-                <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript> -->
                 
                 <!--  pocketbase储存评论 -->
                 <div id="comments" data-url="https://pocketbase.wangyunzi.com/api/comment"></div>
                 <script type="module" crossorigin src="https://pocketbase.wangyunzi.com/comment.js"></script>
                 
-                <!--  isso评论 -->
-                <div>
-                        <script data-isso="http://wangyunzi.com"
-                                data-isso-id="thread-id"
-                                data-isso-css="true"
-                                data-isso-lang="zh"
-                                data-isso-reply-to-self="false"
-                                data-isso-require-author="true"
-                                data-isso-require-email="true"
-                                data-isso-max-comments-top="10"
-                                data-isso-max-comments-nested="5"
-                                data-isso-reveal-on-click="5"
-                                data-isso-avatar="true"
-                                data-isso-avatar-bg="#f0f0f0"
-                                data-isso-avatar-fg="#9abf88 #5698c4 #e279a3 #9163b6 ..."
-                                data-isso-vote="true"
-                                data-isso-vote-levels=""
-                                src="http://wangyunzi.com/js/embed.min.js"></script>
-                            <section id="isso-thread"></section>
-                 </div>
 
             </div>
         </div>
